2007-10-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdnd.c
	* app/widgets/gimpdockbook.c: set GDK_WINDOW_TYPE_HINT_DND on
	popup windows used to implement a DND cursor.

2007-10-16  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/gradient.pdb: increased the arbitrary upper
	limit on the number of segments in
	gimp-gradient-segment-range-split-uniform. The old value used to
	create errors in the "Palette to Gradient" script for most of our
	palettes.

	* app/pdb/gradient_cmds.c: regenerated.

2007-10-16  Sven Neumann  <sven@gimp.org>

	* libgimp/gimplayer.c (gimp_layer_copy): removed obsolete comment
	about adding alpha before adding a layer above the background layer.

2007-10-15  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleoptions.c: added translator comment for the
	string "Current". Changed "Auto Shrink Selection" to "Auto Shrink".

2007-10-15  Martin Nordholts  <martinn@svn.gnome.org>

	* app/core/gimpimage-arrange.c (compute_offset): Use
	gimp_vectors_bounds() instead of gimp_item_offsets|width|height()
	when calculating size and position for a path. Fixes bug #486517.

2007-10-15  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimpaligntool.c (gimp_align_tool_draw): Use
	gimp_vectors_bounds() instead of gimp_item_offsets|width|height()
	when calculating bounding rectangle for a path. Part of a fix for
	bug #486517.

2007-10-15  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangleoptions.[ch]: split the "unit" property
	into "position-unit" and "size-unit" and added a unit menu to the
	position widget group. UI pending further changes...

2007-10-15  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	moved the "Highlight" toggle down to the "Guides" combo.

2007-10-15  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangleoptions.[ch]: added the x and y size
	entries to the GimpRectangleOptionPrivate struct.
